--- a/src/components/userCard/UserCard.module.scss
+++ b/src/components/userCard/UserCard.module.scss
@@ -16,6 +16,7 @@
   opacity: 0;
   animation: fadeInBg 0.4s ease forwards;
   z-index: 0;
+  border-radius: 5px;
 }
 
 @keyframes fadeInBg {
